--- a/styles/global.css
+++ b/styles/global.css
@@ -47,12 +47,17 @@
 
 }
 
-#layout {
+.layout {
     /* LAYOUT */
-    /* display: flex;
-    flex-direction: row;
-    justify-content: center; */
-    margin-top: 4rem;
+    max-width: initial;
+    margin: auto;
+    padding: 0 1em;
+}
+
+@media only screen and (min-width: 1200px) {
+    .layout {
+    max-width: 1200px;
+    }
 }
 
 @keyframes hue-rotation {
