--- a/styles/global.css
+++ b/styles/global.css
@@ -43,7 +43,7 @@
 #content {
     /* FADE IN */
     opacity: 0;
-    transition: opacity 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: opacity 300ms linear;
 
 }
 
