--- a/styles/global.css
+++ b/styles/global.css
@@ -1,12 +1,17 @@
 :root {
     /* COLORS */
     --primary: #00d48a;
-    --primary-hover: #1ad996;
-    --primary-active: #16be84;
+    --primary-hover: #42dda7;
+    --primary-active: #1cb37e;
+
+    --secondary: #42ffef;
+
     --background: #383838;
     --background-secondary: #414141;
+
     --font: #fdfdfd;
     --font-error: #c30505;
+
     --white: #fdfdfd;
 
     /* ROOT STYLE */
@@ -19,23 +24,75 @@
     display: flex;
     flex-flow: row;
     gap: 2rem;
+
+    user-select: none;
 }
 
 .glob-navigation .nav-item {
+    position: relative;
     font-size: 1.6rem;
     background-color: var(--primary);
+    border-color: var(--primary);
+    border-style: solid;
+    border-width: 0.1em;
+    border-radius: 2em;
+    padding: 0.5em 1em;
+
+    cursor: pointer;
+
+    /* DISABLE A STYLES */
+    color: inherit;
+    text-decoration: none;
+
+    transition: background-color linear 100ms;
+}
+
+.glob-navigation .nav-item:hover {
+
+    /* animation: hue-rotation 10s infinite; */
+    background-color: var(--primary-hover);
+    text-decoration: underline;
+    background-color: var(--background);
+    border-color: var(--primary);
+}
+
+.glob-navigation .nav-item .nav-dropdown {
+    position: absolute;
+    display: none;
+
+    left: 0em;
+    padding-top: 2em;
+
+    list-style: none;
+    padding-left: initial;
+}
+
+.glob-navigation .nav-item .nav-dropdown li {
+    margin-bottom: 1.4em;
+}
+
+.glob-navigation .nav-item .nav-dropdown a {
     padding: 0.5em 1em;
     cursor: pointer;
+
+    background-color: var(--background);
+    border-color: var(--primary);
     border-radius: 2em;
+    border-style: solid;
+    border-width: 0.1em;
 
     /* DISABLE A STYLES */
     color: inherit;
     text-decoration: none;
 }
 
-.glob-navigation .nav-item:hover {
+.glob-navigation .nav-item .nav-dropdown a:hover {
+    text-decoration: underline;
+}
 
-    animation: hue-rotation 10s infinite;
+
+.glob-navigation .nav-item:hover .nav-dropdown {
+    display: initial;
 }
 
 .glob-divider {
@@ -70,6 +127,14 @@
     max-width: initial;
     margin: auto;
     padding: 0 1em;
+}
+
+.rounded-border-media {
+    border-radius: 1em;
+}
+
+.mb {
+    margin-bottom: 1.0em;
 }
 
 .image-full {
