--- a/styles/global.css
+++ b/styles/global.css
@@ -20,81 +20,6 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.glob-navigation {
-    display: flex;
-    flex-flow: row;
-    gap: 2rem;
-
-    user-select: none;
-}
-
-.glob-navigation .nav-item {
-    position: relative;
-    font-size: 1.6rem;
-    background-color: var(--primary);
-    border-color: var(--primary);
-    border-style: solid;
-    border-width: 0.1em;
-    border-radius: 2em;
-    padding: 0.5em 1em;
-
-    cursor: pointer;
-
-    /* DISABLE A STYLES */
-    color: inherit;
-    text-decoration: none;
-
-    transition: background-color linear 100ms;
-}
-
-.glob-navigation .nav-item:hover {
-
-    /* animation: hue-rotation 10s infinite; */
-    background-color: var(--primary-hover);
-    text-decoration: underline;
-    background-color: var(--background);
-    border-color: var(--primary);
-}
-
-.glob-navigation .nav-item .nav-dropdown {
-    position: absolute;
-    display: none;
-
-    left: 0em;
-    padding-top: 2em;
-
-    list-style: none;
-    padding-left: initial;
-}
-
-.glob-navigation .nav-item .nav-dropdown li {
-    margin-bottom: 1.4em;
-}
-
-.glob-navigation .nav-item .nav-dropdown a {
-    padding: 0.5em 1em;
-    cursor: pointer;
-
-    background-color: var(--background);
-    border-color: var(--primary);
-    border-radius: 2em;
-    border-style: solid;
-    border-width: 0.1em;
-
-    /* DISABLE A STYLES */
-    color: inherit;
-    text-decoration: none;
-}
-
-.glob-navigation .nav-item .nav-dropdown a:hover {
-    text-decoration: underline;
-}
-
-
-.glob-navigation .nav-item:hover .nav-dropdown {
-    display: initial;
-}
-
 .glob-divider {
     border-color: var(--primary);
 }
@@ -126,15 +51,8 @@
     /* LAYOUT */
     max-width: initial;
     margin: auto;
+    margin-top: 120px;
     padding: 0 1em;
-}
-
-.rounded-border-media {
-    border-radius: 1em;
-}
-
-.mb {
-    margin-bottom: 1.0em;
 }
 
 .image-full {
