--- a/styles/hobbies-table.css
+++ b/styles/hobbies-table.css
@@ -1,10 +1,12 @@
 /* ALL CELLS */
 #hobbies-table{
     width: 100%;
+    border-color: var(--primary);
 }
 
-#hobbies-table td{
+#hobbies-table tr td{
     padding: 0.5em 1em;
+    border-color: var(--background);
 }
 
 /* HEAD */
