--- a/styles/global.css
+++ b/styles/global.css
@@ -17,7 +17,7 @@
     /* ROOT STYLE */
     background-color: var(--background);
     color: var(--font);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 .glob-divider {
@@ -33,6 +33,8 @@
 
 #content h1 {
     border-bottom: 2px solid var(--primary);
+    font-size: 1.7em;
+    font-weight: 100;
 }
 
 #content a {
