--- a/styles/index.css
+++ b/styles/index.css
@@ -38,9 +38,8 @@
 
 .cat-flex-container .img-container .img-background {
     position: absolute;
-    background: url(/assets/pepps.jpg);
-    background-position: center;
-    background-size: cover;
+    background-position: center !important;
+    background-size: cover !important;
 
     filter: blur(10px);
     z-index: -1;
